# FFPose

./: CONTRIBUTING.md  LICENSE-Copy1  README-Copy1.md  README.md  TODO.md  pyproject.toml  requirements.txt
FFPose/: __init__.py  augmentations.py  backbone.py  blocks.py  coco_dataset.py  codec.py  detector.py  encoders.py  head.py  heatmap_codec.py  heatmap_head.py  hrformer.py  hrformer_pose.py  hrnet.py  hrnet_pose.py  inference.py  layers.py  litehrnet.py  litehrnet_pose.py  losses.py  model.py  pipeline.py  preprocess.py  skeletons.py  swin.py  swin_pose.py  training_pipeline.py  tta.py  visualization.py  vit.py  vitpose.py
FFPose/training/: __init__.py  dist.py  ema.py  metrics.py  pipeline_switch.py  scheduler.py  trainer.py
tools/: eval.py  infer_image.py  infer_video.py  train_hrnet_w32_coco.py  train_rtmpose_m_coco.py  train_vitpose_s_coco.py
